Fix #31272: Blender Crashes when press render

Issue was caused by missed libraries. Seems compositor nodes already does check
in such cases, added the same check to texture and shader nodes.